Docs: Format Update

--- a/Market Performance - Walk Score Analytics.ipynb
+++ b/Market Performance - Walk Score Analytics.ipynb
@@ -1958,7 +1958,7 @@
    "source": [
     "Below is the QGIS Visualization.\n",
     "\n",
-    "![alt text](Output\\Part2_Graph2.png \"Geospatial Visualization\")"
+    "![alt text](Output/Part2_Graph2.png \"Geospatial Visualization\")"
    ]
   },
   {
@@ -1980,7 +1980,7 @@
    "source": [
     "Below is the screenshot.\n",
     "\n",
-    "![visual3](Output\\Part2_Graph3.png \"Geospatial Visualization3\")"
+    "![visual3](Output/Part2_Graph3.png \"Geospatial Visualization3\")"
    ]
   },
   {
@@ -2047,7 +2047,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![visual4](Output\\Part2_Graph4.png \"Geospatial Visualization4\")"
+    "![visual4](Output/Part2_Graph4.png \"Geospatial Visualization4\")"
    ]
   },
   {
@@ -2725,7 +2725,7 @@
     "Below instead of looking at two vairables, I plan to check out the multivariables charts in order to identify more patterns. \n",
     "\n",
     "[Tableau]\n",
-    "![visual5](Output\\Part3_Chart1.png \"Exploreation Visualization\")\n"
+    "![visual5](Output/Part3_Chart1.png \"Exploreation Visualization\")\n"
    ]
   },
   {
@@ -2734,7 +2734,7 @@
    "source": [
     "At the same time, rather than showing the walk score as one continuous measurement in tableau, I break the walk score into 5 groups based on the reference in order to clarify any potential pattern. \n",
     "\n",
-    "![visual6](Output\\Part3_Chart2.png \"Exploreation Visualization2\")"
+    "![visual6](Output/Part3_Chart2.png \"Exploreation Visualization2\")"
    ]
   },
   {
